# MCPs-IA

./: README.md  claude_desktop_config.json  client.py  client_previsao.py  main.py  pyproject.toml  requirements.txt  servidor.py  servidor_claude_wikipedia.py  servidor_previsao_tempo.py
